[package]
name = "rocket_prometheus"
description = """
Prometheus instrumentation for Rocket applications.
"""
version = "0.2.0"
authors = ["Ben Sully <ben@bsull.io>"]
repository = "https://github.com/sd2k/rocket_prometheus"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["rocket", "prometheus", "instrumentation", "monitoring"]
readme = "README.md"

[dependencies]
prometheus = "0.6"
rocket = { version = "0.5.0-dev", features = ["tls"], default-features = false }

[dev-dependencies]
lazy_static = "1.3.0"
rocket_contrib = "0.5.0-dev"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[badges]
travis-ci = { repository = "sd2k/rocket_prometheus", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.template_ci]
versions = ["nightly"]
clippy = { run = false }
rustfmt = { run = true, version = "nightly", allow_failure = false }

[patch.crates-io]
# Use newest ring
rocket = { git = 'https://github.com/SergioBenitez/Rocket', rev = 'dbcb0a75b9556763ac3ab708f40c8f8ed75f1a1e' }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', rev = 'dbcb0a75b9556763ac3ab708f40c8f8ed75f1a1e' }
